syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;

message GetBalanceRequest {
  string token = 1;
  string address = 2;
  int64 block_number = 3;
}

message GetBalanceResponse {
  int64 amount = 1 [(gogoproto.jsontag) = "amount"];
}

service AccountService {
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse) {
    option (google.api.http) = {
      get: "/v1/accounts/{address}/blocks/{block_number}/tokens/{token}"
    };
  }
}
